$Id: ChangeLog,v 1.45 2003/07/25 01:56:41 urabe Exp $

2003-07-25 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
	* shmdump.c : -x (hexadecimal dump) and -f (file output)

2003-07-24 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
	* wadd2.c : "mv" -> "cp;rm" for cygwin
	* win.c : SUN sound file output ("PUT")

2003-07-02 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
	* ecore2.c : introduced strerror() after patch by Nakagawa.
	* src/Makefile.in : added @LIBSHMGET@ to ecore2_LDADD
	* Version 1.1.21 released.

2003-06-23 Tsuruoka Hiroshi <tsuru@eri.u-tokyo.ac.jp>
	* Version 1.1.20 released.

2003-06-23 Tsuruoka Hiroshi <tsuru@eri.u-tokyo.ac.jp>
        * wintosac.c : win text format to sac/sac2000 format

2003-06-22 Tsuruoka Hiroshi <tsuru@eri.u-tokyo.ac.jp>
        * wintowin.c : win text format to win format

2003-06-10 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
	* ecore2.c : deleted '#include <errno.h>' and recovored ext defs.
	* Version 1.1.19 released.

2003-06-09 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
	* hypomh.f, hypomhc.c : bug fixed by Honda/Nagai for initialization of IYEAR 
	* Version 1.1.18 released.

2003-06-03 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
	* ecore2.c : replaced err-related ext defs with '#include <errno.h>'

2003-06-01 Tsuruoka Hiroshi  <tsuru@eri.u-tokyo.ac.jp>
	* shmdump.c : add filtering option 
                    : bug fix -f option

2003-05-25 Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* hypomhc.c : TRAVEL-TIME CALCULATION MODE
	            : bug fix
	* Version 1.1.17 released.

2003-05-20 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
	* win.c : allow origin time at out of file in AUTPK mode
	          set S range after the P time already picked in AUTPK mode
	* update_ch : created.
	* Version 1.1.16 released.

2003-05-14 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
	* shmdump.c : fflush(fpout) inserted for rawdump

2003-05-12 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
	* win.c : 2003.5.2 version, added options -e and -i
            -e [exclusively_use_ch_file], eg. '-e ch.tbl'