@@ -1,4 +1,7 @@
-$Id: ChangeLog,v 1.45 2003/07/25 01:56:41 urabe Exp $
+$Id: ChangeLog,v 1.46 2003/07/30 01:28:39 urabe Exp $
+
+2003-07-30 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
+	* win.c : Ignore clicks on horizontal borders in ZOOM window.
 
 2003-07-25 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
 	* shmdump.c : -x (hexadecimal dump) and -f (file output)
